# vkmini

./: .gitignore  LICENSE  README.MD  example.py  group_example.py  pyproject.toml
examples/: group_example.py  sync_example.py  user_longpoll.py  user_longpoll_async.py
json_schema/: schema_parser.py
tests/: sync.py
vkmini/: __init__.py  api.py  api.pyi  exceptions.py  group_longpoll.py  keyboard.py  logger.py  method_groups.py  printer.py  request.py  user_longpoll.py  utils.py
vkmini/group/: group_callback.py  group_longpoll.py
vkmini/methods/: method_group.py  methods.pyi
vkmini/types/: __init__.pyi  api.pyi  methods.pyi  objects.py  objects.pyi  responses.py  responses.pyi
